--- a/Trabajo de clases.html
+++ b/Trabajo de clases.html
@@ -1,149 +1,238 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título de la Página</title>
-    <!-- Enlaces a archivos CSS -->
+    <title>VideoGame</title>
+
     <link rel="stylesheet" href="css/materialize.css">
     <link rel="stylesheet" href="css/materialize.min.css">
-    <!-- Otros elementos del encabezado aquí -->
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    <!-- Encabezado -->
+
+
+
     <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="#" class="brand-logo">Logo</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="#">Enlace</a></li>
-            </ul>
-            <ul id="nav-mobile" class="sidenav">
-                <li><a href="#">Enlace</a></li>
-            </ul>
-            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menú</i></a>
+
+
+            <a id="logo-container" href="#" class="brand-logo" style="margin-left: -150px; margin-top: -4px;">
+                <img src="Imagenes/Reyna.png" alt="" style="width: 70px; height: auto;">
+            </a>
+
+            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"></i></a>
         </div>
     </nav>
 
-    <!-- Contenido Principal -->
+
     <div class="section no-pad-bot" id="index-banner">
         <div class="container">
             <br>
-            <h1 class="header center orange-text">Restaurante</h1>
+            <h1 class="header center orange-text">Valorant</h1>
             <div class="row center">
-                <h5 class="header col s12 light">¡Experimenta la autenticidad en cada bocado, una experiencia culinaria incomparable!</h5>
+                <h5 class="Des1">¡Experimenta la emocion de un videojuego, que te hara subir la
+                    adrenalina!</h5>
             </div>
             <div class="row center">
-                <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">
-                    Empezar
+                <a href="https://playvalorant.com/es-mx/" id="download-button"
+                    class="btn-large waves-effect waves-light orange">
+                    Start
                 </a>
             </div>
             <br><br>
         </div>
     </div>
 
-    <!-- Sección de características -->
+
+
+    <div class="FirstImagine">
+        <img class="responsive-img" src="Imagenes/840_560.jpeg">
+    </div>
+
+
+    <div class="Cuadrito">
+        <p class="Descripcion">Valorant es un apasionante juego de disparos táctico en primera persona (FPS)
+            desarrollado por Riot Games.
+            Sumérgete en un emocionante mundo donde la estrategia y
+            la habilidad son clave para alcanzar la victoria. En
+            Valorant, te unirás a uno de los agentes disponibles, cada uno con habilidades únicas, y te enfrentarás en
+            trepidantes partidas 5v5.</p>
+    </div>
+
+
+
+
+
     <div class="container">
         <div class="section">
             <div class="row">
                 <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center light-blue-text"><i class="material-icons">restaurant menu</i></h2>
-                        <h5 class="center">Menú Exclusivo</h5>
-                        <p class="light">
-                            Explora nuestro menú exclusivo diseñado con los mejores ingredientes frescos y recetas
-                            tradicionales que deleitarán tu paladar. Cada plato está cuidadosamente elaborado para
-                            ofrecerte una experiencia culinaria inolvidable.
-                        </p>
+                    <div class="Cuadro2">
+                        <div class="icon-block">
+                            <h2 class="center light-blue-text"><i class="material-icons">Diversidad de agentes</i></h2>
+
+                            <p class="light">
+                                Elige entre una variedad de agentes, cada uno con sus propias habilidades especiales
+                                que pueden cambiar el rumbo de la partida. Desde control de zonas hasta ataques
+                                explosivos, hay un agente para cada estilo de juego.
+                            </p>
+                        </div>
                     </div>
+
+                </div>
+
+
+                <div class="col s12 m4">
+                    <div class="Cuadro2">
+                        <div class="icon-block">
+                            <h2 class="center light-blue-text"><i class="material-icons">Combate táctico</i></h2>
+
+                            <p class="light">
+                                En Valorant, la estrategia es tan importante como la puntería. Coordina con tu equipo,
+                                utiliza el terreno a tu favor y planifica cuidadosamente tus movimientos para superar a
+                                tus oponentes.
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center light-blue-text"><i class="material-icons">local_dining</i></h2>
-                        <h5 class="center">Ambiente Acogedor</h5>
-                        <p class="light">
-                            Disfruta de un ambiente cálido y acogedor donde la atención al detalle y el servicio
-                            excepcional se unen para crear un momento perfecto. Ya sea una cena íntima o una reunión
-                            con amigos, nuestro restaurante es el lugar ideal para disfrutar de buenos momentos.
-                        </p>
+
+                    <div class="Cuadro2">
+                        <div class="icon-block">
+                            <h2 class="center light-blue-text"><i class="material-icons">Armas y equipo:</i></h2>
+
+                            <p class="light">
+                                Domina un amplio arsenal de armas y equipos tácticos para adaptarte a cualquier
+                                situación.
+                                Desde rifles de precisión hasta explosivos, cada herramienta puede marcar la diferencia
+                                entre la victoria y la derrota."
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="col s12 m4">
-                    <div class="icon-block">
-                        <h2 class="center light-blue-text"><i class="material-icons">local_bar</i></h2>
-                        <h5 class="center">Cócteles Creativos</h5>
-                        <p class="light">
-                            Sumérgete en una experiencia sensorial única con nuestra selección de cócteles artesanales
-                            y bebidas refrescantes. Nuestros mixólogos expertos han creado combinaciones innovadoras
-                            que complementarán perfectamente tu experiencia gastronómica.
-                        </p>
-                    </div>
+
                 </div>
             </div>
 
-            <div class="container">
-                <div class="row">
 
-                    <div class="col s3 m3 l3"> 
-                        <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
-                    </div>
-                    <div class="col s3 m3 l3"> 
-                        <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
-                    </div>
-                    <div class="col s3 m3 l3"> 
-                        <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
-                    </div>
-                    <div class="col s3 m3 l3"> 
-                        <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
-                    </div>
-                    <div class="col s6 m6 l6"> 
-                        <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
-                    </div>
-                    <div class="col s6 m6 l6"> 
-                        <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
-                    </div>
-                    <div class="col s3 m3 l3"> 
-                        <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
-                    </div>
-                    <div class="col s3 m3 l3"> 
-                        <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
-                    </div>
-                    <div class="col s3 m3 l3"> 
-                        <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
-                    </div>
-                    <div class="col s3 m3 l3"> 
-                        <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
-                    </div>
-                    <div class="col s12 m12 l12"> 
-                        <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
-                    </div>
-                   
-                    </div>
 
-                </div>   
-            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+    </div>
+    </div>
+
+    <div class="container2">
+        <div class="tarjeta" id="brimstrone">
+            <h3>Brimstrone</h3>
+        </div>
+        <div class="tarjeta" id="cypher">
+            <h3>Cypher</h3>
+        </div>
+        <div class="tarjeta" id="killjoy">
+            <h3>Killjoy</h3>
+        </div>
+        <div class="tarjeta" id="raze">
+            <h3>Raze</h3>
+        </div>
+        <div class="tarjeta" id="omen">
+            <h3>Omen</h3>
+        </div>
+        <div class="tarjeta" id="deadlock">
+            <h3>DeadLock</h3>
+        </div>
+        <div class="tarjeta" id="yuru">
+            <h3>Yuru</h3>
+        </div>
+        <div class="tarjeta" id="reyna">
+            <h3>Reyna</h3>
         </div>
     </div>
 
-    <!-- Pie de Página -->
+    <h1 class="Galeri">Galeria de Imagenes</h1>
+
+    <div class="container">
+        <div class="row">
+
+            <div class="col s3 m3 l3">
+                <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
+            </div>
+            <div class="col s3 m3 l3">
+                <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
+            </div>
+            <div class="col s3 m3 l3">
+                <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
+            </div>
+            <div class="col s3 m3 l3">
+                <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
+            </div>
+            <div class="col s6 m6 l6">
+                <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
+            </div>
+            <div class="col s6 m6 l6">
+                <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
+            </div>
+            <div class="col s3 m3 l3">
+                <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
+            </div>
+            <div class="col s3 m3 l3">
+                <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
+            </div>
+            <div class="col s3 m3 l3">
+                <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
+            </div>
+            <div class="col s3 m3 l3">
+                <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
+            </div>
+            <div class="col s12 m12 l12">
+                <img class="responsive-img" src="Imagenes/wallpaperflare.com_wallpaper.jpg">
+            </div>
+
+
+
+
+
+        </div>
+
+    </div>
+
+
     <footer class="page-footer orange">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Sobre Nosotros</h5>
                     <p class="grey-text text-lighten-4">
-                        En nuestro restaurante, nos apasiona la cocina de calidad y brindar experiencias
-                        gastronómicas memorables a nuestros clientes. Nuestro equipo de chefs expertos
-                        se esfuerza por ofrecer platos deliciosos y auténticos que reflejen nuestra
-                        dedicación a la excelencia culinaria.
+                        Somos el destino definitivo para todos los amantes de Valorant, el emocionante juego de disparos
+                        táctico desarrollado por Riot Games. En nuestra plataforma, encontrarás todo lo que necesitas
+                        para mejorar tu juego, conectarte con la comunidad y mantenerte actualizado sobre las últimas
+                        noticias y eventos de Valorant.
                     </p>
                 </div>
                 <div class="col l3 s12">
                     <h5 class="white-text">Menú</h5>
                     <ul>
-                        <li><a class="white-text" href="#!">Desayuno</a></li>
-                        <li><a class="white-text" href="#!">Almuerzo</a></li>
-                        <li><a class="white-text" href="#!">Cena</a></li>
-                        <li><a class="white-text" href="#!">Bebidas</a></li>
+                        <li><a class="white-text" href="#!">Juegos</a></li>
+                        <li><a class="white-text" href="#!">Clips</a></li>
+                        <li><a class="white-text" href="#!">Skin</a></li>
+                        <li><a class="white-text" href="#!">Noticias</a></li>
                     </ul>
                 </div>
                 <div class="col l3 s12">
@@ -152,7 +241,6 @@
                         <li><a class="white-text" href="#!">Dirección</a></li>
                         <li><a class="white-text" href="#!">Teléfono</a></li>
                         <li><a class="white-text" href="#!">Correo electrónico</a></li>
-                        <li><a class="white-text" href="#!">Reservaciones en línea</a></li>
                     </ul>
                 </div>
             </div>
@@ -164,8 +252,9 @@
         </div>
     </footer>
 
-    <!-- Archivos JavaScript -->
+
     <script src="script.js"></script>
-    <!-- Otros scripts o enlaces a bibliotecas JavaScript aquí -->
+
 </body>
+
 </html>
